--- a/WarehouseEcommerce/Views/Theme/Smart/Orders/ConfirmOrder.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Orders/ConfirmOrder.cshtml
@@ -11,7 +11,7 @@
 <div class="about bg-white confirm-order-page">
     <div class="container custom-max-width">
         <div class="row">
-            <div class="col-md-8 col-sm-8 bg-white my-account login confirm-order-addresses">
+            <div class="col-lg-8 col-sm-12 bg-white my-account login confirm-order-addresses">
                 <div class="about-cnt">
                     <div class="content-wrapper select">
                         @if (ViewBag.Addresses != null)
@@ -45,8 +45,6 @@
                                     <div class="col-md-6 col-sm-6">
                                         <h2 class="text-uppercase"> Shipping Address</h2>
                                         <hr class="custom-hr">
-                                        <div class="w-25 p-3">
-                                            <p>
                                             <p>
                                                 <b>@shiping.AddressLine1 </b> <br />
                                                 @shiping.AddressLine2 <br />
@@ -55,8 +53,6 @@
                                                 <b> Phone:</b> @shiping.Telephone <br />
 
                                             </p>
-                                            </p>
-                                        </div>
 
                                     </div>
 
@@ -70,7 +66,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-12 bg-white my-account login">
+            <div class="col-lg-4 col-sm-12 bg-white my-account login">
                 <div class="about-cnt">
                     <div class="content-wrapper select">
                         <h2 class="text-uppercase"> Items Detail</h2>
