--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
 
             <!-- Modal content-->
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header added-to-basket-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Added to Basket</h4>
                 </div>
@@ -77,7 +77,7 @@
         </div>
     </div>
     @Html.Action("_TopHeaderPartial", "Home")
-    <div class="container-fluid pl-0 pr-0">
+    <div class="container-fluid smart-container-fluid pl-0 pr-0">
 
         @RenderBody()
 
