--- a/WMS/Views/Theme/Default/Shared/_AttributeValueCreate.cshtml
+++ b/WMS/Views/Theme/Default/Shared/_AttributeValueCreate.cshtml
@@ -5,14 +5,13 @@
 </hgroup>
 @using (Html.BeginForm("SaveAttributeValue", "Products", FormMethod.Post, new { @id = "frmattribute" }))
 {
-    @Html.HiddenFor(m => m.AttributeValueId)
 
     <div class="col-md-12 pull-left">
         <div class="input-group h-100 justify-content-center align-items-center">
-            <label class ="col-md-4">Product Attribute</label>
+            <label class="col-md-4">Product Attribute</label>
             <div class="col-md-8">
                 <div class="col-11 p-0 mt-1 pull-left">
-                    @Html.DropDownListFor(m => m.AttributeId, new SelectList(ViewBag.AttributeGroups, "AttributeId", "AttributeName"), new { id = "drpattribute", @class = "chosen-select" })
+                    @Html.DropDownListFor(m => m.AttributeId, new SelectList(ViewBag.AttributeGroups, "AttributeId", "AttributeName"), new { id = "drpattribute", @class = "chosen-select", onchange = "AttributeChange()" })
                 </div>
                 <div class="col-1 p-0 pull-left">
                     <input type="button" onclick="javascript: pcModalAttributes.Show();" id="ProdAttributeAdd" class="btn btn-primary" value="+">
@@ -20,10 +19,16 @@
             </div>
         </div>
         <div class="input-group h-100 justify-content-center align-items-center">
-            <label class ="col-md-4">Attribute Value<span style="color:red"> *</span></label>
+            <label class="col-md-4">Attribute Value<span style="color:red"> *</span></label>
             <div class="col-md-8">
-                @Html.EditorFor(m => m.Value)
-                @Html.ValidationMessageFor(model => model.Value)
+                <div class="col-11 p-0 mt-1 pull-left">
+
+                    @Html.DropDownListFor(m => m.AttributeValueId, new SelectList(ViewBag.AttributeValues, "AttributeValueId", "Value"), new { @class = "chosen-select drpAttrValue" })
+                    @Html.ValidationMessageFor(model => model.AttributeValueId)
+                </div>
+                <div class="col-1 p-0 pull-left">
+                    <input type="button" onclick="javascript: pcModalAttributeValues.Show();" id="ProdAttributeValueAdd" class="btn btn-primary" value="+">
+                </div>
             </div>
         </div>
     </div>
