--- a/WMS/Views/Theme/Default/Tooltips/_TooltipList.cshtml
+++ b/WMS/Views/Theme/Default/Tooltips/_TooltipList.cshtml
@@ -24,7 +24,7 @@
         settings.Settings.ShowHeaderFilterButton = true;
         settings.SettingsPopup.HeaderFilter.Height = 200;
         settings.Settings.ShowFilterBar = GridViewStatusBarMode.Visible;
-        settings.KeyFieldName = "TooltipId";
+        settings.KeyFieldName = "Id";
 
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
