--- a/WMS/Views/Theme/Default/Tooltips/Delete.cshtml
+++ b/WMS/Views/Theme/Default/Tooltips/Delete.cshtml
@@ -55,7 +55,7 @@
         {
             @Html.AntiForgeryToken()
             <div class="form-actions no-color">
-                @Html.HiddenFor(m => m.TooltipId)
+                @Html.HiddenFor(m => m.Id)
                 <input type="submit" value="Delete" class="btn btn-primary" />
                 <div class="btn btn-default">@Html.ActionLink("Back to List", "Index", "null", null)</div>
             </div>
