--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8" />
@@ -6,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>@ViewBag.Title</title>
     <meta name="description" content="" />
+    @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/Theme/University/app/css/university")
     <link rel="stylesheet" href="~/Content/themes/base/jquery-ui.min.css">
     <link rel="icon" href="~/Content/Theme/University/app/images/favico.ico" />
@@ -13,14 +15,15 @@
     <link rel="stylesheet" href="~/Content/Theme/University/app/css/jquery-confirm.min.css">
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/unobtrusive")
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
             integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
             crossorigin="anonymous"></script>
 
-
+    <script src="~/Scripts/Gane.UISettings.js"></script>
 
     @Scripts.Render("~/bundles/bootstrap")
-
 
     <script type="text/javascript">
         var basePath = '@ViewBag.BasePath';
@@ -28,11 +31,24 @@
         var userStatus = '@ViewBag.LoginDetail';
     </script>
 
+    @{ bool loginStatus = WarehouseEcommerce.Helpers.LayoutHelpers.UserLoginStatus(); }
+    @{ bool isSuperUser = WarehouseEcommerce.Helpers.LayoutHelpers.IsSuperUser(); }
 
 </head>
 
 <body>
+    @if (loginStatus && isSuperUser)
+    {
+        <div class="settings-bar">
+            <div class="settings-bar-switch" onclick="javascript:toggleSettingsBar();">
+                <b class="fa fa-paint-brush fa-lg" title="Toggle Settings"></b>
+            </div>
 
+            <div id="settings-bar-content">
+                @Html.Action("SettingsBar", "UISettings")
+            </div>
+        </div>
+    }
     <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
 
