--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_SliderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_SliderPartial.cshtml
@@ -1,56 +1,25 @@
 ﻿@model List<Ganedata.Core.Entities.Domain.WebsiteSlider>
 
-<div id="carousel-example-generic" class="carousel slide home-slider" data-ride="carousel">
-
-    <!-- Indicators -->
-    @*<ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>*@
-
-    <!-- Wrapper for slides -->
-
-
-
-
-
-    <div class="carousel-inner" role="listbox">
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
         @foreach (var item in Model)
         {
             if (!string.IsNullOrEmpty(item.Image))
             {
-                <div class="item active">
-                    <img src="@ViewBag.BaseFilePath@item.Image" alt="@item.ImageAltTag" class="img-responsive" />
-                    <div class="carousel-caption">
-                    </div>
+                <div class="carousel-item active">
+                    <img src="@ViewBag.BaseFilePath@item.Image" alt="@item.ImageAltTag" class="d-block w-100 img-fluid">
+                    @*<img src="~/Content/Theme/Smart/app/img/slider/SliderImage.png" alt="static image" class="d-block w-100 img-fluid">*@
                 </div>
             }
 
         }
-        @*<div class="item">
-            <img src="~/Content/Theme/Smart/app/img/slider/1.jpg" alt="MacBookAir" class="img-responsive" />
-            <div class="carousel-caption">
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/Content/Theme/Smart/app/img/slider/4.jpg" alt="MacBookAir" class="img-responsive" />
-            <div class="carousel-caption">
-            </div>
-        </div>*@
-
     </div>
-
-    <!-- Controls -->
-    @*<a class="left carousel-control custom-carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control custom-carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>*@
-
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
-
-
