--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopProductBannerPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopProductBannerPartial.cshtml
@@ -5,50 +5,40 @@
        
             @if (Model.Count >= 1 && Model.ElementAt(0) != null)
             {
-                <div class="imgbanner side-banner col-12 col-lg-3 col-md-2 d-xs-none">
+                <div class="imgbanner side-banner col-12 col-lg-3 col-md-2 d-xs-none flex-unset">
                     <div class=" beffect">
-
                         <a href="@Url.Action("list", "Products", new { category = Model.ElementAt(0).Name })">
-                            <img src="@ViewBag.BaseFilePath@Model.ElementAt(0).Image" alt="@Model.ElementAt(0).Name" class="img-responsive" />
+                            <img src="@ViewBag.BaseFilePath@Model.ElementAt(0).Image" alt="@Model.ElementAt(0).Name" class="img-fluid" />
                         </a>
-
                     </div>
                 </div>
             }
 
-            <div class="cbanner col-12 col-lg-6 col-md-12">
+            <div class="cbanner col-12 col-lg-6 col-md-12 flex-unset">
                 @if (Model.Count >= 2 && Model.ElementAt(1) != null)
                 {
                     <div class="beffect">
-
                         <a href="@Url.Action("list", "Products", new { category = Model.ElementAt(1).Name })">
-                            <img src="@ViewBag.BaseFilePath@Model.ElementAt(1).Image" alt="@Model.ElementAt(1).Name" class="img-responsive center-block" />
-
+                            <img src="@ViewBag.BaseFilePath@Model.ElementAt(1).Image" alt="@Model.ElementAt(1).Name" class="img-fluid center-block" />
                         </a>
-
                     </div>
                 }
                 @if (Model.Count >= 3 && Model.ElementAt(2) != null)
                 {
                     <div class="beffect">
-
                         <a href="@Url.Action("list", "Products", new { category = Model.ElementAt(2).Name })">
-                            <img src="@ViewBag.BaseFilePath@Model.ElementAt(2).Image" alt="@Model.ElementAt(2).Name" class="img-responsive center-block" />
-
+                            <img src="@ViewBag.BaseFilePath@Model.ElementAt(2).Image" alt="@Model.ElementAt(2).Name" class="img-fluid center-block" />
                         </a>
-
                     </div>
                 }
             </div>
             @if (Model.Count >= 4 && Model.ElementAt(3) != null)
             {
-                <div class="col-3 col-lg-3 col-md-2 side-banner d-xs-none">
+                <div class="col-3 col-lg-3 col-md-2 side-banner d-xs-none flex-unset">
                     <div class="sellbanner beffect">
-
                         <a href="@Url.Action("list", "Products", new { category = Model.ElementAt(3).Name })">
-                            <img src="@ViewBag.BaseFilePath@Model.ElementAt(3).Image" alt="@Model.ElementAt(3).Name" class="img-responsive" />
+                            <img src="@ViewBag.BaseFilePath@Model.ElementAt(3).Image" alt="@Model.ElementAt(3).Name" class="img-fluid" />
                         </a>
-
                     </div>
                 </div>
             }
