--- a/WMS/Views/Theme/Default/Tooltips/Edit.cshtml
+++ b/WMS/Views/Theme/Default/Tooltips/Edit.cshtml
@@ -47,7 +47,7 @@
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
-                    @Html.EditorFor(model => model.Description)
+                    @Html.TextAreaFor(model => model.Description, new { @class = "tooltip-description" })
                     @Html.ValidationMessageFor(model => model.Description)
                 </div>
             </div>
