--- a/WarehouseEcommerce/Views/Theme/Smart/Orders/GetAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Orders/GetAddress.cshtml
@@ -122,14 +122,14 @@
                     <div>
                         <h4 class="text-uppercase mt-20">@(Model == null ? "Add a new address" : "Edit Address")</h4>
                         <div class="search-container row">
-                            <div class="search-box input-group col-md-6">
+                            <div class="search-box input-group col-md-6 col-12">
                                 <input id="postCode" type="text" name="search" value="" placeholder="Enter PostCode" class="text-search-postcode form-control text-uppercase" />
                                 <div id="sp-btn-search" class="input-group-btn">
                                     <button type="button" id="btn-search-category" class="btn btn-search-category" onclick="SearchPostCode();">Find Address</button>
                                 </div>
                             </div>
                             <div id="selectAddresss" class="col-md-6 clearfix">
-                                <select id="selectApiAddress" name="address" onchange="OnchangeDropdownAddress()">
+                                <select id="selectApiAddress" name="address" class="find-address-select" onchange="OnchangeDropdownAddress()">
                                 </select>
                             </div>
                         </div>
@@ -167,7 +167,7 @@
                                     </div>
                                     <div class="col-md-6 col-sm-6">
                                         <div class="form-group">
-                                            @Html.DropDownListFor(model => model.CountryID, ViewBag.Country as SelectList, new { @class = "", @required = "Required" })
+                                            @Html.DropDownListFor(model => model.CountryID, ViewBag.Country as SelectList, new { @class = "find-address-select", @required = "Required" })
 
                                         </div>
                                     </div>
@@ -215,7 +215,7 @@
                             </div>
                         </div>
                         <div class="">
-                            <a href="javascript:;" role="button" class="btn btn-primary" style="font-size:11px" onclick="ChooseShippingAddress(@ViewBag.AccountIds,@ViewBag.BillingAddressId,@ViewBag.ShipingAddressId,@(ViewBag.Shiping==true?"true":"false"))">Select shipping method</a>
+                            <a href="javascript:;" role="button" class="btn btn-primary select-shipping-method-btn" style="font-size:11px" onclick="ChooseShippingAddress(@ViewBag.AccountIds,@ViewBag.BillingAddressId,@ViewBag.ShipingAddressId,@(ViewBag.Shiping==true?"true":"false"))">Select shipping method</a>
                         </div>
                     </div>
                 }
@@ -239,7 +239,7 @@
                             </div>
                         </div>
                         <div class="">
-                            <a href="javascript:;" role="button" class="btn btn-primary" style="font-size:11px" onclick="ChoosePaymentMethod(@ViewBag.AccountIds,@ViewBag.ShipingAddressId,@ViewBag.ShippmentMethodType)">Select payment method</a>
+                            <a href="javascript:;" role="button" class="btn btn-primary select-payment-method-btn" style="font-size:11px" onclick="ChoosePaymentMethod(@ViewBag.AccountIds,@ViewBag.ShipingAddressId,@ViewBag.ShippmentMethodType)">Select payment method</a>
                         </div>
                     </div>
                 }
